Implement fast startup with lazy model loading for Fly.io

--- a/fly.toml
+++ b/fly.toml
@@ -9,12 +9,19 @@ primary_region = 'jnb'
 [build]
 
 [http_service]
-  internal_port = 8000
+  internal_port = 8080
   force_https = true
-  auto_stop_machines = 'stop'
+  auto_stop_machines = false
   auto_start_machines = true
-  min_machines_running = 0
+  min_machines_running = 1
   processes = ['app']
+
+  [[http_service.checks]]
+    interval = "15s"
+    timeout = "10s"
+    grace_period = "60s"
+    method = "GET"
+    path = "/health"
 
 [[vm]]
   memory = '1gb'
